--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <h1 class="display-4"><%= title %></h1>
         <p class="lead">Hello world!</p>
         <hr class="my-4">
-        <p>Jos is stupid. Larry is skinny.</p>
+        <p>Hello</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </div>
 </div>
