Testing out camera capture and file upload

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,39 @@
         <p class="lead">Hello world!</p>
         <hr class="my-4">
         <p>Hello</p>
+        <br>
+        <br>
+        <video id="player" controls autoplay></video>
+		<button id="capture">Capture</button>
+		<canvas id="canvas" width=320 height=240></canvas>
+		<script>
+		  const player = document.getElementById('player');
+		  const canvas = document.getElementById('canvas');
+		  const context = canvas.getContext('2d');
+		  const captureButton = document.getElementById('capture');
+
+		  const constraints = {
+		    video: true,
+		  };
+
+		  captureButton.addEventListener('click', () => {
+		    // Draw the video frame to the canvas.
+		    context.drawImage(player, 0, 0, canvas.width, canvas.height);
+			//stop video stream
+			player.srcObject.getVideoTracks().forEach(track => track.stop());
+		  });
+
+		  // Attach the video stream to the video element and autoplay.
+		  navigator.mediaDevices.getUserMedia(constraints)
+		    .then((stream) => {
+		      player.srcObject = stream;
+		    });
+		</script>
+		<br>
+		<br>
+		<input type="file" accept="image/*" capture="camera">upload camera
+		<br>
+		<br>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </div>
 </div>
