--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,10 @@
 <% include partials/header.ejs %>
-
+ 
 <div class="container-fluid">
     <div class="jumbotron">
-        <h1 class="display-4"><%= title %></h1>
+		<body>
+
+		<h1 class="display-4"><%= title %></h1>
         <p class="lead">Hello world!</p>
         <hr class="my-4">
         <p>Hello</p>
@@ -10,7 +12,6 @@
         <br>
 
         <!--
-
 
         <video id="player" controls autoplay></video>
 		<button id="capture">Capture</button>
@@ -44,47 +45,10 @@
 		<br>
 		<br>
 
-		
-		<title>JavaScript file upload</title>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<script type="text/javascript">
-		var upload = function() {
-		    var photo = document.getElementById("photo");
-		    var file = photo.files[0];
-
-		    console.log("File name: " + file.fileName);
-		    console.log("File size: " + file.fileSize);
-		    console.log("Binary content: " + file.getAsBinary());
-		    console.log("Text content: " + file.getAsText(""));
-
-		    var preview = document.getElementById("preview");
-		    preview.src = file.getAsDataURL();
-
-		    return false;
-		};
-		</script>
-		</head>
-		<body>
-
-		<input type='file' onchange="readURL(this);" />
 		<img id="userUpload"/>
-		<script>
-			function readURL(input) {
-            	if (input.files && input.files[0]) {
-	               	var reader = new FileReader();
-
-	                reader.onload = function (e) {
-	                    $('#userUpload')
-	                        .attr('src', e.target.result);
-	                };
-                reader.readAsDataURL(input.files[0]);
-            }
-        }
-		</script>
-
-
-		<br>
-		<br>
+		<input type='file' onchange="readImageInput(this, userUpload)" />
+		<script type="text/javascript" src="camera.js"></script> 
+		</body>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </div>
 </div>
