--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
                 
                 <ul class="navbar-nav navbar-right ">
                     <li class="nav-item active mx-2"><a class="nav-link" href="/login">Login</a></li>
-                    <li class="nav-item active mx-2"><a class="nav-link" href="/signup">Sign Up</a></li>
+                    <li class="nav-item active mx-2"><a class="nav-link" href="/register">Sign Up</a></li>
                     <li class="nav-item active mx-2"><a class="nav-link" href="/logout">Logout</a></li>
                 </ul>
           </div>
