--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,16 +11,35 @@
 </div>
 
 <div class="container">
-	<video id="player" autoplay="autoplay"></video>
-	<button id="capture">Capture</button>
-	<canvas id="canvas" width=320 height=240></canvas>
-	
-	<img id="userUpload"/>
-	
-	<form id="frmUploader" enctype="multipart/form-data" action="register/upload/" method="post">
-        <input type="file" onchange="readImageInput(this)" name="imgUploader" />
-        <input class="btn btn-primary btn-lg" type="submit" name="submit" id="btnSubmit" value="Upload" />
+    <h1>Sign Up!</h1>
+    <form id="frmUploader" enctype="multipart/form-data" action="register/upload/" method="post">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input class="form-control" type="text" name="username" placeholder="username">
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input class="form-control" type="password" name="password" placeholder="password">
+        </div>
+        
+        <div class="form-group">
+        	<video id="player" autoplay="autoplay"></video>
+        	<canvas id="canvas" width=320 height=240></canvas>
+        	<!--<img id="userUpload" />-->
+        	<div>
+        	   <button class="btn btn-outline-primary" type="button" id="capture">Capture</button>
+                <span>OR</span>        
+                <input class="btn btn-outline-secondary" type="file" onchange="readImageInput(this)" name="imgUploader"/>
+        	</div>
+        </div>
+        
+        <hr>
+        
+        <div class="form-group">
+            <input class="btn btn-lg btn-success" type="submit" name="submit" id="btnSubmit" value="Submit" />
+        </div>
     </form>
+    
 </div>
 
 <script type="text/javascript" src="camera.js"></script>
