--- a/views/options.ejs
+++ b/views/options.ejs
@@ -23,18 +23,12 @@
             <div class="row">
                 <h1 style="text-align:center;"></h1>
                 <div style="width:30%; margin:20px auto;">
-                    <form action="/Login" method="POST">
+                    <form action="/transaction" method="GET">
                         <div class="form-group">
-                            <input class="form-control" type="text" name="UserName" placeholder="UserName">
+                           <h1>Options:</h1>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" name="CompanyID" placeholder="CompanyID">
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="Password" placeholder="Password">
-                        </div>
-                        <div class="form-group">
-                            <button class="btn btn-lg btn-primary btn-block">Login</button>
+                            <button class="btn btn-lg btn-primary btn-block">Transaction</button>
                         </div>
                     </form>
                     <a href="">Go Back</a>
