--- a/views/transaction.ejs
+++ b/views/transaction.ejs
@@ -23,18 +23,18 @@
             <div class="row">
                 <h1 style="text-align:center;"></h1>
                 <div style="width:30%; margin:20px auto;">
-                    <form action="/Login" method="POST">
+                    <form action="/transaction" method="POST">
                         <div class="form-group">
-                            <input class="form-control" type="text" name="UserName" placeholder="UserName">
+                            <input class="form-control" type="text" name="Reciepiant" placeholder="Reciepiant">
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" name="CompanyID" placeholder="CompanyID">
+                            <input class="form-control" type="text" name="Amount" placeholder="Amount">
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" name="Password" placeholder="Password">
+                            <input class="form-control" type="text" name="CurrencyType" placeholder="Currency Type">
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-lg btn-primary btn-block">Login</button>
+                            <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                         </div>
                     </form>
                     <a href="">Go Back</a>
