--- a/views/options.ejs
+++ b/views/options.ejs
@@ -23,7 +23,7 @@
             <div class="row">
                 <h1 style="text-align:center;"></h1>
                 <div style="width:30%; margin:20px auto;">
-                    <form action="/transaction" method="GET">
+                    <form action="/auth" method="GET">
                         <div class="form-group">
                            <h1>Options:</h1>
                         </div>
